--- a/dependencies.html
+++ b/dependencies.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>test - About</title>
+    <title>test - Project Dependencies</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -48,8 +48,8 @@
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
-            <strong>About</strong>
-          </li>
+                          <a href="index.html" title="About">About</a>
+            </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
             </li>
@@ -84,8 +84,8 @@
                           <a href="project-summary.html" title="Project Summary">Project Summary</a>
             </li>
                       <li class="none">
-                          <a href="dependencies.html" title="Dependencies">Dependencies</a>
-            </li>
+            <strong>Dependencies</strong>
+          </li>
               </ul>
         </li>
           </ul>
@@ -98,9 +98,10 @@
     </div>
     <div id="bodyColumn">
       <div id="contentBox">
-        <div class="section">
-<h2>About test<a name="About_test"></a></h2><a name="About_test"></a>
-<p>There is currently no description associated with this project.</p></div>
+        <a name="Project_Dependencies"></a>
+<div class="section">
+<h2>Project Dependencies<a name="Project_Dependencies"></a></h2>
+<p>There are no dependencies for this project. It is a standalone application that does not depend on any other project.</p></div>
       </div>
     </div>
     <div class="clear">
