--- a/distribution-management.html
+++ b/distribution-management.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>test - About</title>
+    <title>test - Project Distribution Management</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -48,14 +48,14 @@
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
                       <li class="none">
-            <strong>About</strong>
-          </li>
+                          <a href="index.html" title="About">About</a>
+            </li>
                       <li class="none">
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
             </li>
                       <li class="none">
-                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
-            </li>
+            <strong>Distribution Management</strong>
+          </li>
                       <li class="none">
                           <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
             </li>
@@ -99,8 +99,11 @@
     <div id="bodyColumn">
       <div id="contentBox">
         <div class="section">
-<h2>About test<a name="About_test"></a></h2><a name="About_test"></a>
-<p>There is currently no description associated with this project.</p></div>
+<h2>Overview<a name="Overview"></a></h2><a name="Overview"></a>
+<p>The following is the distribution management information used by this project.</p>
+<div class="section">
+<h3>Site - github<a name="Site_-_github"></a></h3><a name="Site_-_github"></a>
+<p>scm:git:git@github.com:slawekjaranowski/test.git</p></div></div>
       </div>
     </div>
     <div class="clear">
