--- a/project-summary.html
+++ b/project-summary.html
@@ -114,7 +114,7 @@
 <td>test project</td></tr>
 <tr class="b">
 <td>Homepage</td>
-<td><a class="externalLink" href="https://github.com/slawekjaranowski/test">https://github.com/slawekjaranowski/test</a></td></tr></table></div>
+<td><a class="externalLink" href="http://slawekjaranowski.github.io/test">http://slawekjaranowski.github.io/test</a></td></tr></table></div>
 <div class="section">
 <h3>Project Organization<a name="Project_Organization"></a></h3><a name="Project_Organization"></a>
 <p>This project does not belong to an organization.</p></div>
